Updated to solve padding issue causing overflow, added map embedded in iframe

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,28 @@
     z-index: 20;
 }
 
+.footer-container {
+    padding: 2rem 0;
+    background: #313131;
+    color: #c5c5c5;
+}
+
+.theme-alternate .footer-container {
+    background: #f5f5f5;
+    color: #8f8f8f;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.responsive-iframe {
+    width: 100%;
+    height: 600px;
+    border: none;
+    padding-top: 1rem;
+}
+
 .navbar .container .title {
     font-weight: 200;
     color: grey;
@@ -34,10 +56,13 @@
     box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.2);
 }
 
+.text-align-right {
+    text-align: right;
+}
+
 .container {
     margin: 0 auto;
     width: 90%;
-    padding: 0 1rem;
     max-width: 1700px;
 }
 
@@ -53,6 +78,22 @@
     padding-top: 1rem;
 }
 
+.px-2 {
+    padding: 1rem 0;
+}
+
+.py-2 {
+    padding: 0 1rem;
+}
+
+.pb-2 {
+    padding-bottom: 2rem;
+}
+
+.mb-2 {
+    margin-bottom: 2rem;
+}
+
 .mr-1 {
     margin-right: 0.5rem!important;
 }
@@ -64,7 +105,6 @@ html, body {
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    padding-top: 64px; 
 }
 
 .mat-drawer-backdrop {
@@ -91,18 +131,18 @@ mat-sidenav {
     flex: 1 1 auto;
 }
 
-.mat-drawer-container{
-    position: unset!important;
-} 
+.sidenav-content-padding {
+    padding-top: 64px;
+}
 
 @media only screen and (max-width: 600px) {
-    body {
-        margin-top: 56px;
+    .sidenav-content-padding {
+        padding-top: 56px;
     }
     mat-sidenav {
         width: 250px;
     }
     .container {
-        width: 100%;
+        width: 96%;
     }
 }
